# T-Todo

./: MANIFEST.in  Makefile  README.md  index.ts  package.json  pyproject.toml  setup.py  todo.db
.github/: pull_request_template.md
CLAUDE/: README.md  agent.xml  brief.md  next-features.md  tasks.xml  userFlows.xml
CLAUDE/Iteration_reports/: ITERATION1_ADJUST1_COMPLETE.md  ITERATION1_COMPLETE.md  ITERATION2_COMPLETE.md  ITERATION3_COMPLETE.md  ITERATION4_COMPLETE.md  ITERATION5_ADJUST1_COMPLETE.md  ITERATION5_COMPLETE.md  ITERATION6_COMPLETE.md  ITERATION7_ADJUST1_COMPLETE.md  ITERATION7_COMPLETE.md  ITERATION8_COMPLETE.md  TEMPLATE.md
src/ttodo/: __init__.py  __main__.py  app.py  app.py.backup  app.py.bak  cli.py
src/ttodo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ttodo/commands/: parser.py  role_commands.py  task_commands.py  window_commands.py
src/ttodo/database/: migrations.py
src/ttodo/ui/: kanban.py  multi_panel_grid.py  panels.py  task_detail.py
src/ttodo/utils/: archive.py  colors.py  date_utils.py  validators.py
terminal_todo/: Makefile  README.md  app.py  config.py  main.py  requirements.txt  test_foundation.py  todo.db
terminal_todo/commands/: parser.py
terminal_todo/database/: migrations.py  models.py
tests/: test_foundation.py  test_iteration8.py
